[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day_05_lib"
path = "src/lib.rs"

[[bin]]
name = "day_05"
path = "src/main.rs"

[dependencies]
itertools = "0.12.0"
rayon = "1.8"